--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
       frame-src 'self' https://phantom.app;
     ">
 
-    <link rel="icon" type="image/png" href="/favicon.svg">
+    <!-- Embedded SVG Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23FF385C;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%238B5CF6;stop-opacity:1' /%3E%3C/linearGradient%3E%3CradialGradient id='shine' cx='30%25' cy='30%25' r='50%25'%3E%3Cstop offset='0%25' style='stop-color:%23ffffff;stop-opacity:0.4' /%3E%3Cstop offset='100%25' style='stop-color:%23ffffff;stop-opacity:0' /%3E%3C/radialGradient%3E%3C/defs%3E%3Ccircle cx='50' cy='50' r='48' fill='url(%23grad)' stroke='rgba(255,255,255,0.3)' stroke-width='2'/%3E%3Ccircle cx='50' cy='50' r='43' fill='none' stroke='rgba(255,255,255,0.2)' stroke-width='1.5'/%3E%3Cellipse cx='35' cy='35' rx='15' ry='20' fill='url(%23shine)'/%3E%3Ctext x='50' y='72' font-family='Arial, sans-serif' font-size='55' font-weight='bold' fill='white' text-anchor='middle'%3EE%3C/text%3E%3C/svg%3E">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
